
Please send any bug reports to BenBE@omorphia.de, or use the bug report tracker
at sourceforge (http://sourceforge.net/tracker/?group_id=114997&atid=670231)

Version 1.0.8.11
  -  Added language files
     * DCL (Petr Hendl)
     * LDIF (Bruno Harbulot)
     * PARI/GP (Charles R Greathouse IV)
     * SPARK (Phil Thornley)
     * StoneScript (Archimmersion)
     * UPC (Viraj Sinha)
  -  Improvements to language files (BenBE)
     * Symbol and char literal handling for Scala (Paul Butcher, BenBE)
     * Multiline comments of F# weren't actually multiline (BenBE)
     * Support for IPv6 addresses in RFC822 messages (BenBE)
     * Properly handle retrieving names from language files (MikeSee, BenBE)
     * Changes for improved highlighting of signle line comments and end-of-code indicators
     * Missing keywords and improved highlighting of comments
     * Problem with DOS/Batch highlighting breaking out at variables (BenBE)
     * Addition of MMX/SSE/x86-64 registers and MMX/SSE instructions (up to 4.2) (Dennis Yurichev)
Version 1.0.8.10
  -  Added language files
     * BASCOM AVR (Michal Goralczyk)
     * C: Loadrunner dialect (Stuart Moncrieff)
     * CoffeeScript (Trevor Burnham)
     * EPC (Thorsten Muehlfelder)
     * Euphoria (Nicholas Koceja)
     * Falcon (billykater)
     * HTML5 (Robert Lidberg)
     * LLVM (Azriel Fasten)
     * PL/I (Robert Prins)
     * ProFTPd (Benny Baumann)
     * PyCon (Benny Baumann)
     * UnrealScript (pospi)
     * YAML (Josh Ventura)
  -  Small bugfix in LangCheck when looking for language files
  -  Added '-' to list of RX chars that require explicit escaping (SF#3056454, BenBE)
  -  Minor changes to boundary checks (SF#3077256, BenBE)
  -  Improvements to language files (BenBE)
     * Major rework of the ALGOL68 language file (Neville Dempsey)
     * LangCheck warnings from GO language file (BenBE)
     * Some additions to the Objeck language file (Randy Hollines)