@@ -217,6 +217,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - Vala                   Nicolas Joseph
 - VB                     Roberto Rossi
 - VB.NET                 Alan Juden
+- Vedit                  Pauli Lindgren
 - Verilog                Günter Dannoritzer
 - VIM Script             Swaroop C H
 - Visual FoxPro          Roberto Armellin
